<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DecentMessenger</string>
    <string name="action_settings">Settings</string>

    <string name="bluetooth_off">Bluetooth is Off</string>
    <string name="bluetooth_on">Bluetooth is On</string>

    <string name="enable">Enable</string>
    <string name="disable">Disable</string>

    <string name="discoverable">Discoverable</string>

    <string name="view_paired">Paired Devices</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="stop_scan">Scan Devices</string>

    <string name="list_paired_devices">Paired Devices</string>
    <string name="list_devices">List of Devices</string>

    <string name="pair">Pair</string>

</resources>